--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
   "license": "MIT",
   "devDependencies": {
     "lerna": "^3.2.1"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "cookie-session": "^2.0.0-beta.3",
+    "dotenv": "^6.0.0",
+    "ejs": "^2.6.1",
+    "stylus": "^0.54.5"
   }
 }
